# mograpen

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
editor/: Cargo.toml
editor/src/: app.rs  main.rs
mogral/: Cargo.toml
mogral-cli/: Cargo.toml
mogral-cli/src/: main.rs
mogral/src/: ast.rs  exec.rs  grammar.lalrpop  lib.rs  op.rs  parser.rs  pos.rs  span.rs  types.rs  wrapper.rs
mogral/src/code_gen/: builder.rs  code_gen.rs  error.rs  gen.rs  mod.rs  util.rs  value.rs
mogral/src/parser/: error.rs  grammar.lalrpop  mod.rs
mogral/tests/: code_gen_fail.rs  exec.rs
