[package]
name = "editor"
version = "0.1.0"
authors = ["raii <raii.program@gmail.com>"]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

tracing-subscriber = "0.3"
egui_dock = { version = "0.5", features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"
mogral = { path = "../mogral" }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
