[package]
name = "mogral"
version = "0.1.0"
edition = "2021"
authors = ["raii <raii.program@gmail.com>"]
license = "MIT OR Apache-2.0"

[build-dependencies]
lalrpop = "0.19.9"

[dependencies]
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
regex = "1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm15-0", "target-x86"] }
thiserror = "1"
